syntax = "proto3";
option go_package = "/proto;proto";
package Message;

import "google/protobuf/timestamp.proto";

message HelloRequest {
  string name = 1;
  google.protobuf.Timestamp time = 2;
  string message_id = 3;
}

message HelloReply {
  string message = 1;
  google.protobuf.Timestamp time = 2;
  string message_id = 3;
}

service Greeter {
  rpc SayHello (stream HelloRequest) returns (stream HelloReply) {}
}